[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/actors/Prota.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/Fila.gd" type="Script" id=2]

[node name="Fila" type="Node2D"]
script = ExtResource( 2 )

[node name="Prota" parent="." instance=ExtResource( 1 )]

[node name="MonsterBase" type="Node2D" parent="."]
[connection signal="area_entered" from="Prota/ChildDetector" to="." method="_on_ChildDetector_area_entered"]
[connection signal="area_exited" from="Prota/ChildDetector" to="." method="_on_ChildDetector_area_exited"]

[editable path="Prota"]
